--- a/app/views/users/plans/index.html.erb
+++ b/app/views/users/plans/index.html.erb
@@ -12,16 +12,16 @@
            <table class="min-w-full divide-y divide-gray-200">
              <thead class="bg-gray-50">
                <tr>
-                 <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                 <th scope="col" class="plan-line">
                    N°
                  </th>
-                 <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                 <th scope="col" class="plan-line">
                    Crée le
                  </th>
-                 <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                 <th scope="col" class="plan-line">
                    Durée du programme
                  </th>
-                 <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                 <th scope="col" class="plan-line">
                    Type de programme
                  </th>
                  <th scope="col"
@@ -35,7 +35,7 @@
                        d="M37.93,9.592c-0.747,0.358-1.063,1.253-0.704,2c0.358,0.748,1.255,1.065,2.001,0.705c3.57-1.71,7.851-0.978,10.652,1.824  c0.293,0.293,0.677,0.439,1.061,0.439s0.768-0.146,1.061-0.439c0.586-0.586,0.586-1.536,0-2.121  C48.301,8.301,42.648,7.333,37.93,9.592z" />
                      </svg>
                  </th>
-                 <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                 <th scope="col" class="plan-line">
                    <svg class="fill-current h-6 w-6 ml-5" fill="none" xmlns="http://www.w3.org/2000/svg"
                      xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 100 125"
                      style="enable-background:new 0 0 100 100;" xml:space="preserve">
