--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -8,6 +8,11 @@
     </div>
     <p class="text-sm text-gray-500 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-6 -mb-1">© 2020 with <span style="color:red"><i class="fas fa-heart"></i></span> by les Perruches
     </p>
+    <div class="mt-1">
+    <%= link_to new_contact_path, class:"text-sm text-gray-500 hover:text-indigo-500 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-8 -mb-1" do %>
+        Contact
+      <%end%>
+    </div>
 
           <!--right-part footer-->
     <span class="icon-org  sm:ml-auto sm:mt-0  sm:justify-start">
