--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -41,7 +41,7 @@
       </div>
       <div class="flex-grow sm:text-left text-center mt-6 sm:mt-0">
         <h2 class="text-gray-900 text-lg title-font font-medium mb-2">Prends-soin de ta santé</h2>
-        <p class="leading-relaxed text-base text-gray-500">Mange mieux en laissant nos algorithmes choisir tes repas en fonction de
+        <p class="leading-relaxed text-base text-gray-500">Mange mieux en nous laissant choisir tes repas en fonction de
           tes informations.
         </p>
       </div>
@@ -81,7 +81,9 @@
             Questions fréquentes
           </h2>
           <p class="mt-4 text-lg text-gray-500">Parce que t'hésites encore ? </p>
-          <a href="<%= new_contact_path %>" class="font-medium text-indigo-600 hover:text-indigo-500">Contacte-nous !</a>
+          <%= link_to new_contact_path do %>
+            <p class="font-medium text-indigo-600 hover:text-indigo-500">Contacte-nous !</p>
+          <% end %>
         </div>
         <div class="mt-12 lg:mt-0 lg:col-span-2">
           <dl class="space-y-12">
@@ -109,7 +111,7 @@
                 Comment sont calculées mes journées ?
               </dt>
               <dd class="mt-2 text-base text-gray-500">
-                Nous utilisons des formules issues de la recherche pour tous nos algorithmes, nous avons simplement
+                Nous utilisons des formules issues de la recherche et approuvées par les nutritionnistes, nous avons simplement
                 besoin de connaître, en plus de tes objectifs, ton âge, ton poids et ta taille !
               </dd>
             </div>
