--- a/app/views/users/users/_form.html.erb
+++ b/app/views/users/users/_form.html.erb
@@ -1,4 +1,4 @@
-<div class="container mx-auto min-h-screen my-24">
+<div class="container mx-auto min-h-screen">
  
   <div class="middle-page flex items-center justify-evenly">
 
