--- a/app/views/admins/recipes/_form.html.erb
+++ b/app/views/admins/recipes/_form.html.erb
@@ -9,7 +9,8 @@
       Renseigne l'url de la nouvelle recette.
     </p>
     <p class="mt-2 text-center text-sm text-gray-400 max-w">
-      Disclaimer: le succès de l'ajout n'est pas garanti, si tu rencontres un échec, merci d'essayer avec une autre recette.
+      Disclaimer: le succès de l'ajout n'est pas garanti, si tu rencontres un échec, merci d'essayer avec une autre
+      recette.
     </p>
 
   </div>
