--- a/app/views/users/plans/_new.html.erb
+++ b/app/views/users/plans/_new.html.erb
@@ -36,10 +36,9 @@
 
             <div class="form-modal">
               <%= form_with(model: Plan.new, url: plans_path, method: "post", local: true) do |f| %>
-               <button
-                  class="border-b border-warning hover:text-warning"
-                  data-action="click->modal#close">Retour</button>
-                <h2 class="text-xl mb-4 text-center">Nouveau programme</h2>
+              <button class="border-b border-warning hover:text-warning"
+                data-action="click->modal#close">Retour</button>
+              <h2 class="text-xl mb-4 text-center">Nouveau programme</h2>
 
               <ul class=" rounded-md -space-y-px">
                 <li>
@@ -55,22 +54,22 @@
                     <label class="items-center text-sm cursor-pointer">
                       <%= f.radio_button(:diet_type, 2, class:"w-5 h-5") %>
                       <span class="ml-3 font-medium text-gray-900">Programme moins de sucres<span
-                      class="italic text-sm text-gray-400 ml-3">max. 50g de sucres par repas.
-                      </span>
+                          class="italic text-sm text-gray-400 ml-3">max. 50g de sucres par repas.
+                        </span>
                     </label>
                   </div>
                 </li>
               </ul>
 
               <h4 class="text-base mb-4 ml-32 text-center text-gray-600">Durée en jours<span
-                class="italic text-sm text-gray-400 ml-3">(entre 1 et 7 jours)</span></h4>
+                  class="italic text-sm text-gray-400 ml-3">(entre 1 et 7 jours)</span></h4>
               <div class="flex flex-row h-10 w-full rounded-lg relative bg-transparent justify-items-center">
-                <button 
+                <button
                   class="decrement bg-primary-300 text-gray-600 hover:bg-primary-800 hover:text-white  w-20 rounded-l cursor-pointer outline-none ">
                   <span class="m-auto text-2xl font-thin">−</span>
                 </button>
                 <%= f.number_field(:nb_of_days, in: 1..7, value: 1, class: "nb_of_days bg-white text-sm text-gray-900 text-center focus:outline-none border w-full text-gray-700 text-sm font-semibold border-primary-800 focus:border-primary-600 rounded-l-md w-full p-1 text-xl") %>
-                <button 
+                <button
                   class="increment bg-primary-300 text-gray-600 hover:bg-primary-800 hover:text-white  w-20 rounded-r cursor-pointer">
                   <span class="m-auto text-2xl font-thin">+</span>
                 </button>
@@ -78,7 +77,7 @@
 
               <div class="flex flex-row justify-center flex-wrap">
                 <%= f.submit "Générer", class: "submit"%>
-                <% end %>               
+                <% end %>
               </div>
             </div>
 
