--- a/app/views/users/recipes/show.html.erb
+++ b/app/views/users/recipes/show.html.erb
@@ -125,8 +125,8 @@
           </div>
         </div>
 
-        <p class="mt-5 ml-5 text-sm text-gray-500 hover:text-gray-700  cursor-pointer focus:outline-none"><span class="text-base"><i
-              class="far fa-clock"></i></span> <%= @recipe.total_time %> minutes </p>
+        <p class="mt-5 ml-5 text-sm text-gray-500 hover:text-gray-700  cursor-pointer focus:outline-none"><span
+            class="text-base"><i class="far fa-clock"></i></span> <%= @recipe.total_time %> minutes </p>
         <details class="my-5">
           <summary class="mt-5 text-lg text-gray-500 hover:text-gray-700  cursor-pointer focus:outline-none">
             Ingrédients :
