--- a/app/views/users/users/_sidebar.html.erb
+++ b/app/views/users/users/_sidebar.html.erb
@@ -18,9 +18,17 @@
           <% end %>
           <%= render 'users/plans/new' %>
 
-   <% if current_user.current_plan_id? %>
+          <% if current_user.current_plan_id? %>
           <%= link_to plan_path(current_user.current_plan_id), class:"text-gray-600 hover:bg-primary-800 hover:text-white group flex items-center px-2 py-2 text-sm font-medium rounded-md" do %>
-        <svg  class="fill-current group-hover:text-white mr-3 h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 100 125" x="0px" y="0px"><path d="M30.5,80A2.5,2.5,0,0,0,33,77.5v-17a2.5,2.5,0,0,0-5,0v17A2.5,2.5,0,0,0,30.5,80Z"/><path d="M43.5,80A2.5,2.5,0,0,0,46,77.5v-17a2.5,2.5,0,0,0-5,0v17A2.5,2.5,0,0,0,43.5,80Z"/><path d="M56.5,80A2.5,2.5,0,0,0,59,77.5v-17a2.5,2.5,0,0,0-5,0v17A2.5,2.5,0,0,0,56.5,80Z"/><path d="M69.5,80A2.5,2.5,0,0,0,72,77.5v-17a2.5,2.5,0,0,0-5,0v17A2.5,2.5,0,0,0,69.5,80Z"/><path d="M91,51.53v0h0v-13A2.5,2.5,0,0,0,88.5,36h-7L71.89,17c0-.07-.07-.14-.11-.2a8.29,8.29,0,0,0-7-3.82h-.52a6.75,6.75,0,0,0-6.5-5H42.24a6.75,6.75,0,0,0-6.5,5H35.3a8.45,8.45,0,0,0-7.12,3.88,2,2,0,0,1-.11.2L18.47,36h-7A2.5,2.5,0,0,0,9,38.5v13H9v0a2.24,2.24,0,0,0,.06.52v0l7.25,31.38A9.62,9.62,0,0,0,25.76,91H74.24a9.6,9.6,0,0,0,9.44-7.54l7.26-31.4v0A2.22,2.22,0,0,0,91,51.53ZM40.5,14.74A1.74,1.74,0,0,1,42.24,13H57.76a1.74,1.74,0,0,1,1.74,1.74v.52A1.74,1.74,0,0,1,57.76,17H42.24a1.74,1.74,0,0,1-1.74-1.74Zm-8,4.72A3.42,3.42,0,0,1,35.3,18h.79a6.75,6.75,0,0,0,6.15,4H57.76a6.75,6.75,0,0,0,6.15-4h.87a3.25,3.25,0,0,1,2.71,1.4L75.93,36H24.07ZM14,41H86v8H14ZM78.81,82.35A4.65,4.65,0,0,1,74.24,86H25.76a4.65,4.65,0,0,1-4.57-3.67L14.64,54H85.36Z"/></svg>
+          <svg class="fill-current group-hover:text-white mr-3 h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none"
+            viewBox="0 0 100 125" x="0px" y="0px">
+            <path d="M30.5,80A2.5,2.5,0,0,0,33,77.5v-17a2.5,2.5,0,0,0-5,0v17A2.5,2.5,0,0,0,30.5,80Z" />
+            <path d="M43.5,80A2.5,2.5,0,0,0,46,77.5v-17a2.5,2.5,0,0,0-5,0v17A2.5,2.5,0,0,0,43.5,80Z" />
+            <path d="M56.5,80A2.5,2.5,0,0,0,59,77.5v-17a2.5,2.5,0,0,0-5,0v17A2.5,2.5,0,0,0,56.5,80Z" />
+            <path d="M69.5,80A2.5,2.5,0,0,0,72,77.5v-17a2.5,2.5,0,0,0-5,0v17A2.5,2.5,0,0,0,69.5,80Z" />
+            <path
+              d="M91,51.53v0h0v-13A2.5,2.5,0,0,0,88.5,36h-7L71.89,17c0-.07-.07-.14-.11-.2a8.29,8.29,0,0,0-7-3.82h-.52a6.75,6.75,0,0,0-6.5-5H42.24a6.75,6.75,0,0,0-6.5,5H35.3a8.45,8.45,0,0,0-7.12,3.88,2,2,0,0,1-.11.2L18.47,36h-7A2.5,2.5,0,0,0,9,38.5v13H9v0a2.24,2.24,0,0,0,.06.52v0l7.25,31.38A9.62,9.62,0,0,0,25.76,91H74.24a9.6,9.6,0,0,0,9.44-7.54l7.26-31.4v0A2.22,2.22,0,0,0,91,51.53ZM40.5,14.74A1.74,1.74,0,0,1,42.24,13H57.76a1.74,1.74,0,0,1,1.74,1.74v.52A1.74,1.74,0,0,1,57.76,17H42.24a1.74,1.74,0,0,1-1.74-1.74Zm-8,4.72A3.42,3.42,0,0,1,35.3,18h.79a6.75,6.75,0,0,0,6.15,4H57.76a6.75,6.75,0,0,0,6.15-4h.87a3.25,3.25,0,0,1,2.71,1.4L75.93,36H24.07ZM14,41H86v8H14ZM78.81,82.35A4.65,4.65,0,0,1,74.24,86H25.76a4.65,4.65,0,0,1-4.57-3.67L14.64,54H85.36Z" />
+            </svg>
           Mes ingrédients
           <% end %>
           <% end %>
@@ -36,9 +44,9 @@
           <% end %>
           <% end %>
           <%= link_to edit_user_path(current_user), class:"text-gray-600 hover:bg-primary-800 hover:text-white group flex items-center px-2 py-2 text-sm font-medium rounded-md" do %>
-          <svg class="fill-current group-hover:text-white mr-3 h-6 w-6" fill="none"
-            xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px"
-            viewBox="0 0 32 40" style="enable-background:new 0 0 32 32;" xml:space="preserve">
+          <svg class="fill-current group-hover:text-white mr-3 h-6 w-6" fill="none" xmlns="http://www.w3.org/2000/svg"
+            xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 32 40"
+            style="enable-background:new 0 0 32 32;" xml:space="preserve">
             <g>
               <g>
                 <g>
@@ -96,7 +104,7 @@
           Paramètres du compte
           <% end %>
 
-  
+
 
           <% if current_user.admin %>
           <hr>
