--- a/app/views/users/plans/destroy.js.erb
+++ b/app/views/users/plans/destroy.js.erb
@@ -1,1 +1,3 @@
 document.getElementById("plan<%=@plan.id%>").remove();
+document.querySelector("#sidebar").innerHTML = "";
+document.querySelector("#sidebar").innerHTML = "<%= j render 'users/users/sidebar' %>";
