--- a/app/views/users/users/_sidebar.html.erb
+++ b/app/views/users/users/_sidebar.html.erb
@@ -1,4 +1,4 @@
-<div class="flex shrink-1 md:flex-shrink-0">
+<div id="sidebar" class="flex shrink-1 md:flex-shrink-0">
 
   <div class="flex flex-col w-40 md:w-48 lg:w-64">
 
