fixed mailer + changed homepage text + margin bottom on btn on plan show

--- a/app/views/users/plans/show.html.erb
+++ b/app/views/users/plans/show.html.erb
@@ -41,7 +41,7 @@
       <hr>
       <% end %>
     </div>
-    <%= button_to "Envoyez-moi cette liste par mail", shopping_list_path, method: :get, class: "submit"%>
+    <%= button_to "Envoyez-moi cette liste par mail", shopping_list_path, method: :get, class: "submit mb-8"%>
   </div>
 </div>
 
