--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -53,10 +53,10 @@
         <i class="fas fa-carrot fa-3x" style="color:orange;"></i>
       </div>
       <div class="flex-grow sm:text-left text-center mt-6 sm:mt-0">
-        <h2 class="text-gray-900 text-lg title-font font-medium mb-2">Différents régimes</h2>
+        <h2 class="text-gray-900 text-lg title-font font-medium mb-2">Différents programmes</h2>
         <p class="leading-relaxed text-base text-gray-500">Différents régimes alimentaires sont disponibles en fonction
           de tes
-          objectifs.</p>
+          objectifs et reçois ta liste d'ingrédients directement par mail !.</p>
       </div>
     </div>
   </div>
