formatted recipe steps

--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -56,7 +56,7 @@
         <h2 class="text-gray-900 text-lg title-font font-medium mb-2">Différents programmes</h2>
         <p class="leading-relaxed text-base text-gray-500">Différents régimes alimentaires sont disponibles en fonction
           de tes
-          objectifs et reçois ta liste d'ingrédients directement par mail !.</p>
+          objectifs et reçois ta liste d'ingrédients directement par mail !</p>
       </div>
     </div>
   </div>
