formatted recipe steps

--- a/app/views/users/recipes/show.html.erb
+++ b/app/views/users/recipes/show.html.erb
@@ -142,7 +142,7 @@
             Etapes :
           </summary>
             <% @recipe.steps_formatted.each do |step| %> 
-          <p class="text-gray-500"> <%= step %> </p>
+          <p class="text-gray-500"> <%= step + "." %> </p>
           <% end %>
         </details>
 
