--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -42,7 +42,7 @@
       <div class="flex-grow sm:text-left text-center mt-6 sm:mt-0">
         <div class="text-gray-900 text-lg title-font font-me">Plus rapide</div>
         <p class="leading-relaxed text-base text-gray-500">Gagne du temps en planifiant tes menus sur une durée que tu
-          choisis.</p>
+          choisis et en recevant ta liste d'ingrédients directement dans ta boîte mail !</p>
       </div>
       <div class="land-pres sm:w-32 sm:order-none order-first sm:h-32 h-20 w-20 sm:ml-10 ">
         <i class="fas fa-user-clock fa-3x" style="color:green;"></i>
@@ -54,9 +54,9 @@
       </div>
       <div class="flex-grow sm:text-left text-center mt-6 sm:mt-0">
         <h2 class="text-gray-900 text-lg title-font font-medium mb-2">Différents programmes</h2>
-        <p class="leading-relaxed text-base text-gray-500">Différents régimes alimentaires sont disponibles en fonction
+        <p class="leading-relaxed text-base text-gray-500">Différents programmes alimentaires sont disponibles en fonction
           de tes
-          objectifs et reçois ta liste d'ingrédients directement par mail !</p>
+          objectifs.</p>
       </div>
     </div>
   </div>
