--- a/app/views/users/plans/show.html.erb
+++ b/app/views/users/plans/show.html.erb
@@ -14,7 +14,7 @@
         <summary class="mt-5 text-xl text-gray-500 hover:text-gray-700  cursor-pointer focus:outline-none">
           Jour n°<%= idx + 1 %>
         </summary>
-        <p class="text-gray-600 text-base my-3">Ton dîner :
+        <p class="text-gray-600 text-base my-3">Ton déjeuner :
           <span class="tracking-wide text-lg  text-primary-600">
             <%= link_to recipe_path(day.lunch) do %><%= day.lunch.title %>
             <span>
