--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -119,3 +119,6 @@
     </div>
   </div>
 </div>
+
+<audio id="perruche-sound" src="<%= audio_path("perruche.wav") %>"></audio>
+<%= javascript_pack_tag 'perruche' %>
