--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -7,7 +7,7 @@
       <span class="ml-3 font-semibold text-xl text-white mr-1">Meal</span><span class="mt-1">ories</span>
     </div>
     <p class="text-sm text-gray-500 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-6 -mb-1">© 2020
-      with <span style="color:red"><i class="fas fa-heart"></i></span> by les Perruches
+      with <span style="color:red"><i class="fas fa-heart"></i></span> by les <span id="perruche">Perruches</span>
     </p>
     <div class="mt-1">
       <%= link_to new_contact_path, class:"text-sm text-gray-500 hover:text-indigo-500 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-8 -mb-1" do %>
